@@ -304,20 +304,6 @@ name|hadoop
 operator|.
 name|mapreduce
 operator|.
-name|MRJobConfig
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|mapreduce
-operator|.
 name|util
 operator|.
 name|ProcessTree
@@ -335,6 +321,22 @@ operator|.
 name|util
 operator|.
 name|Shell
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|conf
+operator|.
+name|YarnConfiguration
 import|;
 end_import
 
@@ -465,9 +467,9 @@ name|System
 operator|.
 name|getProperty
 argument_list|(
-name|MRJobConfig
+name|YarnConfiguration
 operator|.
-name|TASK_LOG_DIR
+name|YARN_APP_CONTAINER_LOG_DIR
 argument_list|)
 return|;
 block|}
