@@ -2310,29 +2310,6 @@ name|APPLICATION_TOKENS_FILE
 init|=
 literal|"appTokens"
 decl_stmt|;
-comment|/** The log directory for the containers */
-DECL|field|TASK_LOG_DIR
-specifier|public
-specifier|static
-specifier|final
-name|String
-name|TASK_LOG_DIR
-init|=
-name|MR_PREFIX
-operator|+
-literal|"container.log.dir"
-decl_stmt|;
-DECL|field|TASK_LOG_SIZE
-specifier|public
-specifier|static
-specifier|final
-name|String
-name|TASK_LOG_SIZE
-init|=
-name|MR_PREFIX
-operator|+
-literal|"container.log.filesize"
-decl_stmt|;
 DECL|field|MAPREDUCE_V2_CHILD_CLASS
 specifier|public
 specifier|static
